<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:overScrollMode="never">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        tools:context=".ui.AlbumDetailFragment">

        <TextView
            android:id="@+id/txt_no_albums"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_album"
            android:visibility="gone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/albumDetailRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/album_detail_item" />

        <TextView
            android:id="@+id/tracksTitleCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/tracks_title_card_view"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/tracksCardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            android:visibility="gone">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tracks"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/track_item" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/commentsTitleCardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif"
            android:text="@string/comments_title_card_view"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/commentsCardView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            android:visibility="gone">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/comments"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:overScrollMode="never"
                tools:listitem="@layout/comment_item">

            </androidx.recyclerview.widget.RecyclerView>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/newCommentLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/newCommentTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="15dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/new_comment_title"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/commenterTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="@string/commenter_title"
                        android:textColor="@color/gray_em"
                        android:textSize="15sp" />

                    <Spinner
                        android:id="@+id/commenterSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:textAlignment="gravity"
                        android:textSize="16sp" />

                </LinearLayout>


                <RadioGroup
                    android:id="@+id/radioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/ratingTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/rating_title"
                        android:textColor="@color/gray_em"
                        android:textSize="15sp" />

                    <RadioButton
                        android:id="@+id/ratingValue1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="@string/rating_value_1" />

                    <RadioButton
                        android:id="@+id/ratingValue2"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rating_value_2" />

                    <RadioButton
                        android:id="@+id/ratingValue3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rating_value_3" />

                    <RadioButton
                        android:id="@+id/ratingValue4"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rating_value_4" />

                    <RadioButton
                        android:id="@+id/ratingValue5"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/rating_value_5" />
                </RadioGroup>

                <TextView
                    android:id="@+id/commentReview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="sans-serif"
                    android:labelFor="@id/commentEditText"
                    android:text="@string/rating_comment_input"
                    android:textColor="@color/gray_em"
                    android:textSize="15sp" />

                <EditText
                    android:id="@+id/commentEditText"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:autofillHints="review"
                    android:background="@drawable/border"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    android:padding="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="50dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/createNewCommentButton"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:backgroundTint="@color/black"
                        android:text="@string/comment_action_button"
                        android:textColor="@color/white" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
