<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="albumDetail"
            type="com.example.grupo11_vinilos.models.AlbumDetail" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <ImageView
                    android:id="@+id/albumDetailCover"
                    android:layout_width="250dp"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="10dp"
                    android:contentDescription="@string/image_complement_album" />

                <TextView
                    android:id="@+id/albumDetailName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="sans-serif"
                    android:text="@{albumDetail.name}"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:typeface="normal" />

                <TextView
                    android:id="@+id/albumDetailPerformer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{albumDetail.performers}" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/albumDetailGenre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{albumDetail.genre}" />

                    <TextView
                        android:id="@+id/albumDetailConcat"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dash" />

                    <TextView
                        android:id="@+id/albumDetailReleaseDate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{albumDetail.releaseDate}" />

                </LinearLayout>

                <TextView
                    android:id="@+id/albumDetailDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@{albumDetail.description}"
                    android:textColor="@color/black" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>